# shady-gen

./: Makefile  README.markdown  shady-gen.cabal  todo.md
src/: .ghci
src/Data/: AltNatTrie.hs  NameM.hs  NatTrie.hs  PolyStableMemo.hs  StableMemo.hs  Test.hs  TypeTrie.hs
src/Shady/: Cat.hs  Color.hs  CompileE.hs  CompileEs.hs  CompileImage.hs  CompileSurface.hs  Complex.hs  ITransform.hs  Image.hs  Lighting.hs  Misc.hs  ParamSurf.hs  Vec.hs  Visual.hs
src/Shady/Language/: Compress.hs  Cse.hs  Equality.hs  Exp.hs  GLSL.hs  Glom.hs  Graph.hs  Operator.hs  Reify.hs  Share.lhs  Type.hs
src/Shady/Play/: CseTest.hs  Deriv.hs  Env.hs  Indices.hs  Simplify.hs  TestStable.hs  VectorTest.hs
src/Text/PrettyPrint/Leijen/: DocExpr.hs  DocExprV.hs  PrettyPrec.hs
