Name:                shady-gen
Version:             0.6.0
Cabal-Version:       >= 1.6
Synopsis:            Functional GPU programming - DSEL & compiler
Category:            Language, GPU
Description:
  Compile functional specifications for GPU execution.
  See also shady-graphics, shady-render, shady-tv, and shady-examples
  .
  Copyright 2009-2012 by Conal Elliott; GNU AGPLv3 license (see COPYING).
  This license is a place-holder.  Let me know if you'd like other terms.
Author:              Conal Elliott
Maintainer:          conal@conal.net
Homepage:            http://github.com/conal/shady-gen/
Copyright:           (c) by Conal Elliott 2009-2012
License:             OtherLicense
License-File:        COPYING
Stability:           experimental
build-type:          Simple
Source-Repository head
    type:         git
    location:     git://github.com/conal/shady-gen.git

Library
  hs-Source-Dirs:      src

  Build-Depends:       base >=4 && < 5, containers, mtl, wl-pprint
                     , applicative-numbers>=0.0.4, vector-space>=0.5.6
                     , TypeCompose >= 0.7
                     , MemoTrie, ty, data-treify, Boolean
                     , type-unary >= 0.1.13

  Exposed-Modules:
                       Text.PrettyPrint.Leijen.PrettyPrec
                       Text.PrettyPrint.Leijen.DocExpr
                       Data.NameM
                       Shady.Misc
                       Shady.Complex
                       Shady.Language.Type
                       Shady.Language.Glom
                       Shady.Language.Operator
                       Shady.Language.Exp
                       Shady.Language.Graph
                       Shady.Language.Reify
                       Shady.Language.Cse
                       Shady.Language.Share
                       Shady.Language.GLSL

                       Shady.CompileE
                       Shady.CompileEs

                       Data.StableMemo
                       Shady.Play.CseTest
                       Shady.Play.VectorTest
                       -- experimental:
                       Data.PolyStableMemo
                       -- Data.NatTrie
                       -- Data.TypeTrie
